fix: Incompatibility issues with frontend